# lineprior

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_ja.md
.github/workflows/: ci.yml
crates/lineprior/: Cargo.toml
crates/lineprior-cli/: Cargo.toml
crates/lineprior-cli/src/: main.rs
crates/lineprior-cli/src/commands/: build.rs  eval.rs  mod.rs  query.rs  summary.rs  tune.rs  validate.rs
crates/lineprior-cli/tests/: cli.rs
crates/lineprior/benches/: scoring.rs
crates/lineprior/src/: build.rs  error.rs  eval.rs  gate.rs  hash.rs  input.rs  lib.rs  model.rs  query.rs  report.rs  score.rs  tune.rs
crates/lineprior/tests/: streaming_memory.rs
examples/: observations.jsonl  prior.jsonl  shogi_opening.jsonl  shogi_prior.jsonl
tests/fixtures/: high_entropy.jsonl  invalid_records.jsonl  missing_optional_fields.jsonl  mixed_outcomes.jsonl  simple_success.jsonl  weighted_observations.jsonl
