[package]
name = "lineprior-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for building and querying lineprior prior books."

[[bin]]
name = "lineprior"
path = "src/main.rs"

[dependencies]
lineprior = { path = "../lineprior", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
