[package]
name = "lineprior"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Domain-agnostic action priors built from historical action sequences."
keywords = ["prior", "decision-making", "heuristic", "action-selection", "opening-book"]
categories = ["algorithms", "artificial-intelligence"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "scoring"
harness = false
